# rust-expense-tracker

./: .gitignore  Cargo.toml
.claude/: settings.local.json
migrations/: 20260114065821_create_user_table.sql  20260114074406_create_expense_table.sql  20260114081926_add_email_column.sql  20260114082423_create_category_table.sql  20260114090833_categories_column_on_expense.sql  20260115093423_add_uuid_on_users.sql  20260115093620_add_uuid_on_expense;.sql  20260121093445_drop_expense_table.sql  20260121093537_drop_category_table.sql  20260121093600_drop_users_table.sql  20260121093617_create_users_table.sql  20260121093839_add_category_table.sql  20260121094038_add_expense_table.sql  20260122160431_drop_expense_table.sql  20260122160448_create_expense_table.sql
src/: main.rs
src/errors/: auth_errors.rs  category_errors.rs  errors.rs  expense_errors.rs  mod.rs
src/handlers/: auth.rs  category.rs  expense.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/models/: auth_model.rs  auth_models.rs  category_models.rs  expense_model.rs  mod.rs  user_model.rs
src/routes/: auth_routes.rs  category_routes.rs  expense_routes.rs  mod.rs  user_routes.rs
src/services/: auth_services.rs  category_services.rs  expense_services.rs  jwt_services.rs  mod.rs  redis_services.rs  user_services.rs
src/utils/: utils.rs
templates/: base.html  content1.html
