[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
askama = "0.15.1"
bcrypt = "0.18.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = "0.20.0"
zxcvbn = "3.1.0"
